--- a/WTO/Views/WTO/AddNotification.cshtml
+++ b/WTO/Views/WTO/AddNotification.cshtml
@@ -764,7 +764,14 @@
                                     <div class="row">
                                         <div class="col-xs-12 col-sm-12 col-md-12 stackholderlist">
                                             <div class="row">
-                                                <div class="col-sm-1"><input type="checkbox" id="chkSelectAll_AddStakeholders" /></div>
+                                                <div class="col-sm-1">
+                                                    <div class="checkbox radio-margin" style="margin-top:2px;">
+                                                        <label>
+                                                            <input type="checkbox" id="chkSelectAll_AddStakeholders" />
+                                                            <span class="cr"><i class="cr-icon glyphicon glyphicon-ok cr-small"></i></span>
+                                                        </label>
+                                                    </div>
+                                                </div>
                                                 <div class="col-sm-3">Organization</div>
                                                 <div class="col-sm-2">Contact</div>
                                                 <div class="col-sm-4">Designation</div>
