--- a/WTO/Views/MoM/Add.cshtml
+++ b/WTO/Views/MoM/Add.cshtml
@@ -57,7 +57,7 @@
                                 </div>
                                 <div class="form-group has-feedback ">
                                     <div class="col-xs-12 col-sm-4 col-md-3 bottom-offset-20">
-                                        <input type="text" class="form-control date-picker" style="cursor:pointer" id="txtmeetingdate" />
+                                        <input type="text" class="form-control date-picker" style="cursor:pointer" id="txtmeetingdate" onchange="return IsMeetingExists(0);" />
                                         <i class="glyphicon glyphicon-calendar form-control-feedback blue-color"></i>
                                     </div>
                                     <div class="col-md-7 col-sm-5">
@@ -82,7 +82,7 @@
                                                         <label>
                                                             @if (Model.Notification_MomList != null && Model.Notification_MomList.Count > 0)
                                                             {
-                                                                <input type="checkbox" id="chkSelectAllNotification" class="chkSelectAllNotification" onchange="CheckSelectAll(this);" checked/>
+                                                                <input type="checkbox" id="chkSelectAllNotification" class="chkSelectAllNotification" onchange="CheckSelectAll(this);" checked />
                                                             }
                                                             else
                                                             {
