--- a/WTO/Views/Partial/Notification/NotificationPlanTakeAction.cshtml
+++ b/WTO/Views/Partial/Notification/NotificationPlanTakeAction.cshtml
@@ -53,7 +53,7 @@
                                             <p class="wto-label-bold dark-blue">Meeting Date<sup class="mandetory">*</sup> <span class="pull-right">:</span></p>
                                         </div>
                                         <div class="col-xs-12 col-sm-4 col-md-4">
-                                            <input type="text" class="form-control date-picker @(Model.MeetingDate == ""? "" : "disabled")" id="MeetingDateId" value="@((Model.MeetingDate == "" || Model.Status == 6 )? "" : Model.MeetingDate)" />
+                                            <input type="text" class="form-control date-picker @(Model.MeetingDate == ""? "" : "disabled")" id="MeetingDateId" value="@(Model.MeetingDate == ""? "" : Model.MeetingDate)" onchange="return IsMeetingExists(0);" />
                                             <i class="glyphicon glyphicon-calendar form-control-feedback blue-color"></i>
                                         </div>
                                     </div>
@@ -865,5 +865,29 @@
         $('#txtActionAttachments').append(Files);
         $('#txtActionAttachments').removeClass("hidden");
         $('#txtActionAttachmentCount').val(FileCount + ' file(s) selected');
+    }
+
+    function IsMeetingExists(MoMId) {
+        if ($('[id$=MeetingDateId]').val() != null && $('[id$=MeetingDateId]').val() != '') {
+            $.ajax({
+                url: "/api/MoM/ValidateMeetingdate?date=" + $.trim($('[id$=MeetingDateId]').val()) + "&MoMId=" + MoMId,
+                async: false,
+                type: "POST",
+                contentType: "application/json; charset=utf-8",
+                success: function (result) {
+                    if (result != "") {
+                        Alert("Alert", result + "<br/>", "Ok");
+                        $('[id$=MeetingDateId]').val('');
+                    }
+                },
+                failure: function (result) {
+                    Alert("Alert", "Something went wrong.<br/>", "Ok");
+                },
+                error: function (result) {
+                    Alert("Alert", "Something went wrong.<br/>", "Ok");
+                }
+            });
+            return false;
+        }
     }
 </script>
