--- a/WTO/Views/Shared/_Layout.cshtml
+++ b/WTO/Views/Shared/_Layout.cshtml
@@ -7,14 +7,14 @@
     <link href="~/contents/css/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/contents/css/css/style.min.css" rel="stylesheet" />
     <link href="~/contents/css/css/jquery-ui.css" rel="stylesheet" />
-    <link href="~/contents/css/css/comman.css" rel="stylesheet" />
-    <link href="~/contents/css/css/wto.css" rel="stylesheet" />
+    <link href="~/contents/css/css/comman.css?v=1" rel="stylesheet" />
+    <link href="~/contents/css/css/wto.css?v=1" rel="stylesheet" />
     <link href="~/contents/css/css/CustomAlert.css" rel="stylesheet" />
     <script src="~/contents/js/jquery.min.js"></script>
     <script src="~/contents/js/bootstrap.js"></script>
     <script src="~/contents/js/jstree.min.js"></script>
     <script src="~/contents/js/jquery-ui.js"></script>
-    <script src="~/contents/js/WTOHTMLJS.js?v=1"></script>
+    <script src="~/contents/js/WTOHTMLJS.js?v=2"></script>
     <script src="~/contents/js/Validation.js"></script>
     <script src="~/contents/js/CustomAlert.js"></script>
     <script src="~/contents/js/autosize.min.js"></script>
@@ -86,7 +86,7 @@
                                     </li>
                                     <li class="list AddMOM">
                                         <a href="@Url.Action("Edit", "MoM", new { Id = 0 })">
-                                            <img src="~/contents/img/AddMOM.png" alt="Addnotification" /><span class="submenulist">Current Meeting</span>
+                                            <img src="~/contents/img/CurrentMeeting.png" alt="Addnotification" /><span class="submenulist">Current Meeting</span>
                                         </a>
                                     </li>
                                     <li class="list AddMOMList">
