--- a/WTO/Views/MoM/Add.cshtml
+++ b/WTO/Views/MoM/Add.cshtml
@@ -16,6 +16,7 @@
 
 <input type="hidden" id="hdnExistingNotificationsId" value="" />
 <!-- body section start -->
+<a href="~/Views/MoM/Add.cshtml">~/Views/MoM/Add.cshtml</a>
 <div>
     <div class="container-fluid">
         <div class="row bodybackground">
@@ -61,9 +62,9 @@
                                         <i class="glyphicon glyphicon-calendar form-control-feedback blue-color"></i>
                                     </div>
                                     <div class="col-md-7 col-sm-5">
-                                        <a class="btn btn-blue pull-right btn-padding addsavenotification" style="margin-left:4%" href="@Url.Action("Index", "MoM")"><img src="/contents/img/back-16.png">&nbsp;Back </a>
-                                        <button id="btnSaveUpdate" class="btn btn-dark-green pull-right btn-padding addsavenotification " onclick="return ValidateMeeting();"><img src="/contents/img/save.png">&nbsp;Save</button>
-                                        <a onclick="return OpenPopup();" class="btn btn-blue pull-right" style="margin-right:4%"><span class="glyphicon glyphicon-plus"></span>&nbsp;<b>Add more notifications</b></a>
+                                        <a class="btn btn-blue pull-right btn-padding addsavenotification bottom-offset-10" style="margin-left:4%" href="@Url.Action("Index", "MoM")"><img src="/contents/img/back-16.png">&nbsp;Back </a>
+                                        <button id="btnSaveUpdate" class="btn btn-dark-green pull-right btn-padding addsavenotification bottom-offset-10" onclick="return ValidateMeeting();" style="margin-left:4%"><img src="/contents/img/save.png">&nbsp;Save</button>
+                                        <a onclick="return OpenPopup();" class="btn btn-blue pull-right bottom-offset-10"><span class="glyphicon glyphicon-plus"></span>&nbsp;<b>Add more notifications</b></a>
                                     </div>
                                 </div>
                             </div>
