--- a/WTO/Views/WTO/NotificationList.cshtml
+++ b/WTO/Views/WTO/NotificationList.cshtml
@@ -59,10 +59,10 @@ else
                 <div class="row topbg">
                     <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20 bottom-offset-10">
                         <div class="row">
-                            <div class="col-xs-12 col-sm-6 col-md-6">
+                            <div class="col-xs-8 col-sm-6 col-md-6">
                                 <h4 class="black-color" style="margin-top:0px;"><img src="~/contents/img/bellicon.png" alt="" style="margin-right:15px;"><b>Notification</b></h4>
                             </div>
-                            <div class="col-xs-12 col-sm-6 col-md-6">
+                            <div class="col-xs-4 col-sm-6 col-md-6">
                                 @if (Model.TotalCount > 0)
                                 {
                                     <button href="#" class="btn btn-blue pull-right" onclick="ExportToExcelNotification();"> <img src="~/contents/img/export.png" alt="export" /> Export</button>
@@ -215,9 +215,9 @@ else
                                             </div>
                                         </div>
                                         <div id="DivBtn" class="bottom-offset-10">
-                                            <a href="#" class="btn btn-red pull-right left-offset-10" onclick="return Clear();"> <span class="glyphicon glyphicon-remove"></span> Clear</a>
-                                            <a href="#" class="btn btn-blue pull-right left-offset-10" onclick="return SearchNotification(1);"> <span class="glyphicon glyphicon-search"></span> Search</a>
-                                            <a href="#" class="btn btn-blue pull-right left-offset-10" onclick="return AdvanceSearch();"> <span id="GlySearch" class="glyphicon glyphicon-plus"></span> Advance Search</a>
+                                            <a href="#" class="btn btn-red pull-right left-offset-10 bottom-offset-10" onclick="return Clear();"> <span class="glyphicon glyphicon-remove"></span> Clear</a>
+                                            <a href="#" class="btn btn-blue pull-right left-offset-10 bottom-offset-10" onclick="return SearchNotification(1);"> <span class="glyphicon glyphicon-search"></span> Search</a>
+                                            <a href="#" class="btn btn-blue pull-right left-offset-10 bottom-offset-10" onclick="return AdvanceSearch();"> <span id="GlySearch" class="glyphicon glyphicon-plus"></span> Advance Search</a>
                                         </div>
                                     </div>
                                 </div>
