--- a/WTO/contents/css/css/Dashboard.css
+++ b/WTO/contents/css/css/Dashboard.css
@@ -393,6 +393,10 @@ background:#17fcdf;
 	.sm-top-offset-20{
 			margin-top:20px;
 	}
+
+    .padding-0 {
+        padding: 5px 15px 0px 15px !important;
+    }
 }
 
 
