--- a/WTO/contents/css/css/wto.css
+++ b/WTO/contents/css/css/wto.css
@@ -1104,6 +1104,20 @@ a:hover, a:focus {
         width: 95% !important;
         margin-bottom: 10px;
     }
+
+    .adv {
+        position: relative !important;
+        top: 0 !important;
+    }
+
+    .dialog-ovelay .dialog {
+        width: 95% !important;
+        margin: 50px auto 0 !important;
+        background-color: #fff;
+        box-shadow: 0 0 20px rgba(0,0,0,.2);
+        border-radius: 3px;
+        overflow: hidden;
+    }
 }
 
 .disabled {
