current meeting icon width

--- a/WTO/Views/Shared/_Layout.cshtml
+++ b/WTO/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
                                     </li>
                                     <li class="list AddMOM">
                                         <a href="@Url.Action("Edit", "MoM", new { Id = 0 })">
-                                            <img src="~/contents/img/CurrentMeeting.png" alt="Addnotification" /><span class="submenulist">Current Meeting</span>
+                                            <img src="~/contents/img/CurrentMeeting.png" width="28px" alt="Addnotification" /><span class="submenulist">Current Meeting</span>
                                         </a>
                                     </li>
                                     <li class="list AddMOMList">
