--- a/WTO/Views/Partial/Dashboard/DashboardHSCode.cshtml
+++ b/WTO/Views/Partial/Dashboard/DashboardHSCode.cshtml
@@ -66,20 +66,20 @@
                                 <div class="input-group">
                                     <input type="text" id="HSCodeSearchTxt" class="form-control selecthrsearchtextbox" placeholder="HSCode/Description">
                                     <span class="input-group-btn">
-                                        <button id="searchhscodebtn" class="btn sky-blue" type="button" onclick="SearchHSCode();">Search <span class="glyphicon glyphicon-search"></span></button>
+                                        <button id="searchhscodebtn" class="btn sky-blue bottom-offset-10" type="button" onclick="SearchHSCode();">Search <span class="glyphicon glyphicon-search"></span></button>
                                     </span>
                                 </div>
                             </div>
                             <div class="col-xs-12 col-sm-2 col-md-2">
-                                <a class="btn btn-dark-red" onclick="clearSearchtxt();">Clear <span class="glyphicon glyphicon-remove"></span></a>
+                                <a class="btn btn-dark-red bottom-offset-10" onclick="clearSearchtxt();">Clear <span class="glyphicon glyphicon-remove"></span></a>
                             </div>
                             <div class="col-xs-12 col-sm-4 col-md-4 ">
                                 <div class="row">
                                     <div class="col-xs-6 col-sm-6 col-md-6">
-                                        <a class="btn btn-dark-green btn-block" onclick="SaveHSCode();"><img src="~/contents/img/save.png" /> Save</a>
+                                        <a class="btn btn-dark-green btn-block bottom-offset-10" onclick="SaveHSCode();"><img src="~/contents/img/save.png" /> Save</a>
                                     </div>
                                     <div class="col-xs-6 col-sm-6 col-md-6">
-                                        <a class="btn btn-red btn-block" data-dismiss="modal">Close <span class="glyphicon glyphicon-remove"></span></a>
+                                        <a class="btn btn-red btn-block bottom-offset-10" data-dismiss="modal">Close <span class="glyphicon glyphicon-remove"></span></a>
                                     </div>
                                 </div>
                             </div>
