--- a/WTO/Views/Partial/Notification/NotificationNote.cshtml
+++ b/WTO/Views/Partial/Notification/NotificationNote.cshtml
@@ -26,10 +26,10 @@
                                 <div class="col-sm-offset-5 col-sm-7">
                                     <div class="row">
                                         <div class="col-sm-6">
-                                            <a href="#" class="btn btn-dark-green btn-block btn-padding" onclick="NoteValidation();">Save</a>
+                                            <a href="#" class="btn btn-dark-green btn-block btn-padding bottom-offset-10" onclick="NoteValidation();">Save</a>
                                         </div>
                                         <div class="col-sm-6">
-                                            <a href="#" class="btn btn-red btn-block btn-padding" data-dismiss="modal">Close</a>
+                                            <a href="#" class="btn btn-red btn-block btn-padding bottom-offset-10" data-dismiss="modal">Close</a>
                                         </div>
                                     </div>
                                 </div>
