--- a/WTO/Views/WTO/ManageAccess.cshtml
+++ b/WTO/Views/WTO/ManageAccess.cshtml
@@ -46,7 +46,7 @@
                                 <div class="input-group">
                                     <input type="text" id="HSCodeSearchTxt" class="form-control selecthrsearchtextbox" placeholder="HSCode/Description">
                                     <span class="input-group-btn">
-                                        <button id="searchhscodebtn" class="btn btn-blue" type="button" onclick="SearchHSCode();">Search</button>
+                                        <button id="searchhscodebtn" class="btn btn-blue bottom-offset-10" type="button" onclick="SearchHSCode();">Search</button>
                                     </span>
                                 </div>
                             </div>
@@ -139,10 +139,10 @@
                                     <div class="col-sm-offset-5 col-sm-7">
                                         <div class="row">
                                             <div class="col-sm-6">
-                                                <a href="#" class="btn btn-dark-green btn-block btn-padding" onclick="CountryValidation();">Save</a>
+                                                <a href="#" class="btn btn-dark-green btn-block btn-padding bottom-offset-10" onclick="CountryValidation();">Save</a>
                                             </div>
-                                            <div class="col-sm-6">
-                                                <a href="#" class="btn btn-red btn-block btn-padding" data-dismiss="modal">Close</a>
+                                            <div class="col-sm-6"> 
+                                                <a href="#" class="btn btn-red btn-block btn-padding bottom-offset-10" data-dismiss="modal">Close</a>
                                             </div>
                                         </div>
                                     </div>
