--- a/WTO/Views/Partial/ManageAccess/InternalStackHolders.cshtml
+++ b/WTO/Views/Partial/ManageAccess/InternalStackHolders.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12">
         <label class="table-heading">Internal StakeHolders (@Model.TotalCount)</label>
-        <a href="#" class="btn btn-blue btn-padding pull-right" data-target="#AddInternalStakeholder" onclick="AddInternalStackHolderPopup();" data-toggle="modal">Add Internal StakeHolder</a>
+        <a href="#" class="btn btn-blue btn-padding pull-right bottom-offset-10 top-offset-10" data-target="#AddInternalStakeholder" onclick="AddInternalStackHolderPopup();" data-toggle="modal">Add Internal StakeHolder</a>
         <div class="table-responsive nopaging notificationlist top-offset-20" st>
             <table class="table table-bordered table-fixed">
                 <thead class="second-blackbackground">
