--- a/WTO/Views/Partial/ManageAccess/Language.cshtml
+++ b/WTO/Views/Partial/ManageAccess/Language.cshtml
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12">
         <label class="table-heading">Language (@Model.TotalCount)</label>
-        <a onclick="AddLanguagePopup();" class="btn btn-blue btn-padding pull-right" data-target="#AddLanguage" data-toggle="modal">Add Language</a>
+        <a onclick="AddLanguagePopup();" class="btn btn-blue btn-padding pull-right bottom-offset-10 top-offset-10" data-target="#AddLanguage" data-toggle="modal">Add Language</a>
         <div class="table-responsive nopaging notificationlist top-offset-20" st>
             <table class="table table-bordered table-fixed">
                 <thead class="second-blackbackground">
