--- a/WTO/Views/Partial/ManageAccess/RegulatoryBodies.cshtml
+++ b/WTO/Views/Partial/ManageAccess/RegulatoryBodies.cshtml
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12">
         <label class="table-heading">Regulatory Bodies (@Model.TotalCount)</label>
-        <a href="#" class="btn btn-blue btn-padding pull-right" data-target="#AddRegulatoryBodies" onclick="AddRegulatoryBodyPopup();" data-toggle="modal">Add Regulatory Body</a>
+        <a href="#" class="btn btn-blue btn-padding pull-right bottom-offset-10 top-offset-10" data-target="#AddRegulatoryBodies" onclick="AddRegulatoryBodyPopup();" data-toggle="modal">Add Regulatory Body</a>
         <div class="table-responsive nopaging notificationlist top-offset-20" st>
             <table class="table table-bordered table-fixed">
                 <thead class="second-blackbackground">
