--- a/WTO/Views/Partial/ManageAccess/Template.cshtml
+++ b/WTO/Views/Partial/ManageAccess/Template.cshtml
@@ -8,7 +8,7 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12">
         <label class="table-heading">Templates (@(Model.Templates == null ? 0 : Model.Templates.Count))</label>
-        <a href="#" class="btn btn-blue btn-padding pull-right" data-toggle="modal" onclick="AddTemplatePopup()">Add Template</a>
+        <a href="#" class="btn btn-blue btn-padding pull-right bottom-offset-10 top-offset-10" data-toggle="modal" onclick="AddTemplatePopup()">Add Template</a>
         <div class="table-responsive nopaging notificationlist top-offset-20" st>
             <table class="table table-bordered table-fixed">
                 <thead class="second-blackbackground">
