--- a/WTO/Views/Partial/Notification/NotificationPlanTakeAction.cshtml
+++ b/WTO/Views/Partial/Notification/NotificationPlanTakeAction.cshtml
@@ -98,8 +98,8 @@
                             <div class="col-xs-12 col-sm-12 col-md-12 bottom-offset-20">
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-12 col-md-12">
-                                        <a class="btn btn-red pull-right closeplanAction" id="btncloseModalAction1" data-callfor="close" onclick="closeModalAddAction(this);">Close&nbsp;<span class="glyphicon glyphicon-remove"></span></a>
-                                        <a class="btn btn-dark-green pull-right" id="btnSaveActions" style="margin-right:15px;" onclick="AddNotificationActionOk();"><img src="~/contents/img/save.png" />&nbsp;Save</a>
+                                        <a class="btn btn-red pull-right closeplanAction bottom-offset-10" id="btncloseModalAction1" data-callfor="close" onclick="closeModalAddAction(this);">Close&nbsp;<span class="glyphicon glyphicon-remove"></span></a>
+                                        <a class="btn btn-dark-green pull-right bottom-offset-10" id="btnSaveActions" style="margin-right:15px;" onclick="AddNotificationActionOk();"><img src="~/contents/img/save.png" />&nbsp;Save</a>
                                     </div>
                                 </div>
                             </div>
@@ -116,7 +116,7 @@
         <div class="modal-content selecthrcontent">
 
             <div class="modal-header selecthrheader">
-                <button type="button" class="close selecthrclose" id="btnCloseActionMail" data-callfor="close" onclick="closeActionMail(this);">
+                <button type="button" class="close selecthrclose bottom-offset-10" id="btnCloseActionMail" data-callfor="close" onclick="closeActionMail(this);">
                     <span class="glyphicon glyphicon-remove"></span>
                 </button>
             </div>
@@ -203,8 +203,8 @@
                                     <div class="col-xs-12 col-sm-6 col-md-6">
                                     </div>
                                     <div class="col-xs-12 col-sm-6 col-md-6">
-                                        <a id="btnCloseActionMail1" data-callfor="close" onclick="closeActionMail(this);" class="btn btn-red btn-padding pull-right left-offset-10">Close <span class="glyphicon glyphicon-remove"></a>
-                                        <a class="btn btn-dark-green btn-padding pull-right" data-callfor="close" id="btnSendActionMail" onclick="SendActionMail();">Send</a>
+                                        <a id="btnCloseActionMail1" data-callfor="close" onclick="closeActionMail(this);" class="btn btn-red btn-padding pull-right left-offset-10 bottom-offset-10">Close <span class="glyphicon glyphicon-remove"></a>
+                                        <a class="btn btn-dark-green btn-padding pull-right bottom-offset-10" data-callfor="close" id="btnSendActionMail" onclick="SendActionMail();">Send</a>
                                     </div>
                                 </div>
                             </div>
@@ -241,8 +241,8 @@
                                                     <br />
                                                     <span class="text-danger">doc and pdf file only</span>
                                                 </div>
-                                                <input type="button" class="btn btn-primary btn-padding " value="Ok" onclick="AddActionAttachmentOk();" />
-                                                <input type="submit" class="btn btn-danger btn-padding " value="Cancel" onclick="CloseActionAddAttachment();" />
+                                                <input type="button" class="btn btn-primary btn-padding bottom-offset-10" value="Ok" onclick="AddActionAttachmentOk();" />
+                                                <input type="submit" class="btn btn-danger btn-padding bottom-offset-10" value="Cancel" onclick="CloseActionAddAttachment();" />
                                             </div>
                                         </div>
                                     </div>
