--- a/WTO/Views/Partial/NotificationStakeholders.cshtml
+++ b/WTO/Views/Partial/NotificationStakeholders.cshtml
@@ -76,13 +76,13 @@
     <div class="col-xs-12 col-sm-12 col-md-12">
         @if (@Model != null && @Model.Count > 0)
         {
-            <a id="btnSendMailStakeHolder" class="btn btn-blue pull-right btn-padding btn-padding left-offset-20" onclick="OpenSendMailModel()" data-toggle="modal">Send Mail</a>
-            <button id="btnRemoveStakeholder" class="btn btn-red pull-right btn-padding addsavenotification" onclick="RemoveStakeholder();">Remove Stakeholder</button>
+            <a id="btnSendMailStakeHolder" class="btn btn-blue pull-right btn-padding btn-padding left-offset-20 bottom-offset-10" onclick="OpenSendMailModel()" data-toggle="modal">Send Mail</a>
+            <button id="btnRemoveStakeholder" class="btn btn-red pull-right btn-padding addsavenotification bottom-offset-10" onclick="RemoveStakeholder();">Remove Stakeholder</button>
         }
         else
         {
-            <a id="btnSendMailStakeHolder" class="btn btn-blue pull-right btn-padding btn-padding left-offset-20 hidden" onclick="OpenSendMailModel()" data-toggle="modal">Send Mail</a>
-            <button id="btnRemoveStakeholder" class="btn btn-red pull-right btn-padding addsavenotification hidden" onclick="RemoveStakeholder();">Remove Stakeholder</button>
+            <a id="btnSendMailStakeHolder" class="btn btn-blue pull-right btn-padding btn-padding left-offset-20 hidden bottom-offset-10" onclick="OpenSendMailModel()" data-toggle="modal">Send Mail</a>
+            <button id="btnRemoveStakeholder" class="btn btn-red pull-right btn-padding addsavenotification hidden bottom-offset-10" onclick="RemoveStakeholder();">Remove Stakeholder</button>
         }
     </div>
 </div>
