--- a/WTO/Views/WTO/AddNotification.cshtml
+++ b/WTO/Views/WTO/AddNotification.cshtml
@@ -637,20 +637,20 @@
                                 <div class="input-group">
                                     <input type="text" id="HSCodeSearchTxt" class="form-control selecthrsearchtextbox" placeholder="HSCode/Description">
                                     <span class="input-group-btn">
-                                        <button id="searchhscodebtn" class="btn sky-blue" type="button" onclick="SearchHSCode();">Search <span class="glyphicon glyphicon-search"></span></button>
+                                        <button id="searchhscodebtn" class="btn sky-blue bottom-offset-10" type="button" onclick="SearchHSCode();">Search <span class="glyphicon glyphicon-search"></span></button>
                                     </span>
                                 </div>
                             </div>
                             <div class="col-xs-12 col-sm-2 col-md-2">
-                                <a class="btn btn-dark-red" onclick="clearSearchtxt();">Clear <span class="glyphicon glyphicon-remove"></span></a>
+                                <a class="btn btn-dark-red bottom-offset-10" onclick="clearSearchtxt();">Clear <span class="glyphicon glyphicon-remove"></span></a>
                             </div>
                             <div class="col-xs-12 col-sm-4 col-md-4 ">
                                 <div class="row">
                                     <div class="col-xs-6 col-sm-6 col-md-6">
-                                        <a class="btn btn-dark-green btn-block" onclick="SaveHSCode();"><img src="~/contents/img/save.png" /> Save</a>
+                                        <a class="btn btn-dark-green btn-block bottom-offset-10" onclick="SaveHSCode();"><img src="~/contents/img/save.png" /> Save</a>
                                     </div>
                                     <div class="col-xs-6 col-sm-6 col-md-6">
-                                        <a class="btn btn-red btn-block" data-dismiss="modal">Close <span class="glyphicon glyphicon-remove"></span></a>
+                                        <a class="btn btn-red btn-block bottom-offset-10" data-dismiss="modal">Close <span class="glyphicon glyphicon-remove"></span></a>
                                     </div>
                                 </div>
                             </div>
@@ -740,15 +740,15 @@
                                 <div class="input-group">
                                     <input id="txtSearchStakeHolder" type="text" class="form-control selecthrsearchtextbox" placeholder="Search Stakeholder by Organisation, Name or HS Code" ng-model="search">
                                     <span class="input-group-btn">
-                                        <button class="btn btn-blue" type="button" onclick="searchstakeholder();">Search <span class="glyphicon glyphicon-search"></span></button>
+                                        <button class="btn btn-blue bottom-offset-10" type="button" onclick="searchstakeholder();">Search <span class="glyphicon glyphicon-search"></span></button>
                                     </span>
                                 </div>
                             </div>
                             <div class="col-xs-12 col-sm-4 col-md-4 top-offset-10">
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-12 col-md-12">
-                                        <a class="btn btn-red  pull-right" data-dismiss="modal">Close <span class="glyphicon glyphicon-remove"></span></a>
-                                        <a class="btn btn-dark-green pull-right" style="margin-right:15px;" onclick="SaveStakeholder()"><img src="~/contents/img/save.png" /> Save</a>
+                                        <a class="btn btn-red  pull-right bottom-offset-10" data-dismiss="modal">Close <span class="glyphicon glyphicon-remove"></span></a>
+                                        <a class="btn btn-dark-green pull-right bottom-offset-10" style="margin-right:15px;" onclick="SaveStakeholder()"><img src="~/contents/img/save.png" /> Save</a>
                                     </div>
                                 </div>
                             </div>
@@ -883,7 +883,7 @@
                                                 <div class="input-group col-xs-12">
                                                     <input type="text" class="form-control whitebackground z-index-0" id="txtAttachmentCount" disabled placeholder="0 file(s) selected">
                                                     <span class="input-group-btn">
-                                                        <button class="browse btn btn-primary z-index-0" type="button" onclick="AddAttachment();"> Browse</button>
+                                                        <button class="browse btn btn-primary z-index-0 bottom-offset-10" type="button" onclick="AddAttachment();"> Browse</button>
                                                     </span>
                                                 </div>
                                             </div>
@@ -906,8 +906,8 @@
                                         <div class="col-xs-12 col-sm-6 col-md-6">
                                         </div>
                                         <div class="col-xs-12 col-sm-6 col-md-6">
-                                            <a data-dismiss="modal" class="btn btn-red btn-padding pull-right left-offset-10">Close <span class="glyphicon glyphicon-remove"></a>
-                                            <a class="btn btn-dark-green btn-padding pull-right" onclick="SendmailToStakeholders();" id="btnSendMail">Send</a>
+                                            <a data-dismiss="modal" class="btn btn-red btn-padding pull-right left-offset-10 bottom-offset-10">Close <span class="glyphicon glyphicon-remove"></a>
+                                            <a class="btn btn-dark-green btn-padding pull-right bottom-offset-10" onclick="SendmailToStakeholders();" id="btnSendMail">Send</a>
                                         </div>
                                     </div>
                                 </div>
@@ -944,8 +944,8 @@
                                                         <br />
                                                         <span class="text-danger">doc and pdf file only</span>
                                                     </div>
-                                                    <input type="button" class="btn btn-primary btn-padding " value="Ok" onclick="AddAttachmentOk();" />
-                                                    <input type="submit" class="btn btn-danger btn-padding " value="Cancel" onclick="CloseAddAttachment();" />
+                                                    <input type="button" class="btn btn-primary btn-padding bottom-offset-10" value="Ok" onclick="AddAttachmentOk();" />
+                                                    <input type="submit" class="btn btn-danger btn-padding bottom-offset-10" value="Cancel" onclick="CloseAddAttachment();" />
                                                 </div>
                                             </div>
                                         </div>
@@ -1016,8 +1016,8 @@
                             <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20 bottom-offset-20">
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-12 col-md-12">
-                                        <a class="btn btn-red btn-padding pull-right left-offset-10" data-dismiss="modal">Close</a>
-                                        <a class="btn btn-light-blue btn-padding pull-right left-offset-10" id="btnsendmailtoenquirydesk" onclick="SendMailToEnquiryDesk();">Send</a>
+                                        <a class="btn btn-red btn-padding pull-right left-offset-10 bottom-offset-10" data-dismiss="modal">Close</a>
+                                        <a class="btn btn-light-blue btn-padding pull-right left-offset-10 bottom-offset-10" id="btnsendmailtoenquirydesk" onclick="SendMailToEnquiryDesk();">Send</a>
                                     </div>
                                 </div>
                             </div>
@@ -1112,8 +1112,8 @@
                             <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20 bottom-offset-20">
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-12 col-md-12">
-                                        <a class="btn btn-red btn-padding pull-right left-offset-10" data-dismiss="modal">Close</a>
-                                        <a class="btn btn-light-blue btn-padding pull-right left-offset-10" onclick="SendMailToTranslator();">Send</a>
+                                        <a class="btn btn-red btn-padding pull-right left-offset-10 bottom-offset-10" data-dismiss="modal">Close</a>
+                                        <a class="btn btn-light-blue btn-padding pull-right left-offset-10 bottom-offset-10" onclick="SendMailToTranslator();">Send</a>
                                     </div>
                                 </div>
                             </div>
@@ -1231,7 +1231,7 @@
                             <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20 bottom-offset-20">
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-12 col-md-12">
-                                        <a class="btn btn-red btn-padding pull-right left-offset-10 " data-dismiss="modal">Close</a>
+                                        <a class="btn btn-red btn-padding pull-right left-offset-10 bottom-offset-10" data-dismiss="modal">Close</a>
                                     </div>
                                 </div>
                             </div>
